# axie-ronin-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  axies_abi.json  axs_abi.json  bot2.py  config.example.json  config.json  credentials.example.json  credentials.json  market_abi.json  pyproject.toml  requirements.txt  ronin.py  ronin_eth.json  seed.py  set_proxy.py  setup.py  slp_abi.json  user.py
scripts/: remove_bot.sh  restart_bot.sh  run_bot.sh  run_setup.sh  set_proxy.sh  show_bot_logs.sh
