[tool.poetry]
name = "axieroninbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.11"
pyTelegramBotAPI = "^4.2.0"
web3 = "^5.25.0"
ecdsa = "^0.17.0"
requests = {extras = ["socks"], version = "^2.26.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
